All limits on description length, url validity, etc implemented - except I don't like the url validation I'm using because it doesn't accept obscure extensions. There's definitely a more inclusive way of listing them all than I'm using.

--- a/views/index.erb
+++ b/views/index.erb
@@ -34,14 +34,13 @@
           <li>&#9650;
             <span class="news-title">
               <a href= <%= "#{article_info[:URL]}" %>> <%= article_info[:Title] %> </a>
-            </span> <%= "(#{article_info[:URL].slice( /(.*?\.com)/ ) } )" %>
+            </span> <%= "(#{article_info[:URL].slice( /(.*?(.com|.net|.io|.gov|.org))/ ) } )" %>
 
             <p class="points">
               <%= article_info[:Description] %>
             </p>
           </li>
         <% end %>
-
 
 
 
