--- a/public/styles.css
+++ b/public/styles.css
@@ -25,26 +25,27 @@ body {
   border: 1px solid;
   padding: 3px;
   margin: 3px;
-  }
-
-.logger {
-   float: right;
 }
 
-ul #login {
-   padding-top: 6px;
-   padding-right: 4px;
+.logger {
+  float: right;
+  margin: 0px;
+  padding: 0px;
+  display: inline;
+}
+
+#login {
+  padding-top: 6px;
+  padding-right: 4px;
   float: right;
   display: inline-block;
   list-style: none;
-
 }
 
 .nav-container ul {
   margin: 0px;
   padding: 0px;
   display: inline-block;
-
 }
 
 .nav > li > a {
@@ -64,7 +65,6 @@ ul #login {
 
 .news-items li {
   padding-top: 8px;
-
 }
 
 .news-items{
@@ -94,17 +94,17 @@ ul #login {
 }
 
 .footer {
-   background: #f9f9f5;
-   padding: 0px;
-   margin: 0px;
-   margin-left: auto;
-   margin-right: auto;
-   width: 100%;
-   text-align: center;
-   border-top: 2px solid #ff6600
+  background: #f9f9f5;
+  padding: 0px;
+  margin: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  text-align: center;
+  border-top: 2px solid #ff6600
 }
 
-.footer li{
+.footer li {
   display: inline-block;
   list-style: none;
   padding: 10px 5px;
@@ -131,10 +131,9 @@ ul #login {
   list-style: none;
   padding: 10px;
   margin: 0px;
-
 }
 
-.add-comment{
+.add-comment {
   background: #f9f9f5;
   padding: 0px 10px;
 }
@@ -148,7 +147,7 @@ ul #login {
 .all-comments ul {
   list-style: none;
   margin: 0px;
-  }
+}
 
 .all-comments ul li {
   padding: 5px;
@@ -159,8 +158,7 @@ ul #login {
 }
 
 .all-comments ul li a {
-
-color: #000000;
+  color: #000000;
 }
 
 .article-submitter {
