--- a/views/index.erb
+++ b/views/index.erb
@@ -33,7 +33,7 @@
     <% @articles_info.each do |article_info| %>
           <li>&#9650;
             <span class="news-title">
-              <a href= <%= "#{article_info[:URL]}" %>> <%= article_info[:Title] %> </a>
+              <a href= <%= "#{article_info[:URL]}" %> target=_blank> <%= article_info[:Title] %> </a>
             </span> <%= "(#{article_info[:URL].slice( /(.*?(.com|.net|.io|.gov|.org))/ ) } )" %>
 
             <p class="points">
