--- a/views/index.erb
+++ b/views/index.erb
@@ -10,7 +10,7 @@
   <body>
 
 
-  <div class="nav-container">
+  <div class="nav-container cf">
     <ul class="nav">
       <li id="logo"> Y </li>
       <li><a href="/"><strong>Hacker News</strong></a></li>
