--- a/views/submit.erb
+++ b/views/submit.erb
@@ -9,20 +9,20 @@
 
   <body>
 
-    <div class="nav-container">
-    <ul class="nav">
-      <li id="logo"> Y </li>
-      <li><a href="/"><strong>Hacker News</strong></a></li>
-      <li>new &nbsp; |</li>
-      <li>comments &nbsp; |</li>
-      <li>ask &nbsp; |</li>
-      <li>jobs &nbsp; |</li>
-      <li> <a href= <%="/submit" %> > submit </a> </li>
-    </ul>
+    <div class="nav-container cf">
+      <ul class="nav">
+        <li id="logo"> Y </li>
+        <li><a href="/"><strong>Hacker News</strong></a></li>
+        <li>new &nbsp; |</li>
+        <li>comments &nbsp; |</li>
+        <li>ask &nbsp; |</li>
+        <li>jobs &nbsp; |</li>
+        <li> <a href="/submit"> submit </a> </li>
+      </ul>
 
-    <ul class="logger">
-    <li id="login"> login</li>
-    </ul>
+      <ul class="logger">
+        <li id="login"> login</li>
+      </ul>
   </div>
 
 <div class="content-list">
